<resources>
    <string name="app_name">SafeGuarder</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">SafeGuarder</string>

    <!--Facebook ID -->
    <string name="facebook_app_id">1562226370685896</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="current_location">Current</string>
    <string name="home_location">Home</string>
    <string name="my_location">My Location</string>
    <string name="home_location_not_set">Home location has not been set</string>

    <string name="home_setting_search_address_failed">Cannot find the address</string>

    <string name="zone_activity_title">Zone Settings</string>
    <string name="zone_setting_radius">Radius(m)</string>
    <string name="zone_setting_update_setting">Update changes</string>
    <string name="zone_setting_invalid_radius">The radius should be positive number larger than 0</string>
    <string name="zone_setting_update_home_location">Update home location</string>
    <string name="zone_setting_update_changes_successfully">Update new settings successfully</string>
    <string name="zone_setting_update_changes_failed">Cannot update settings</string>

    <!-- Left menu titles -->
    <string name="left_menu_notification">Notification</string>
    <string name="left_menu_observation">Observations</string>
    <string name="left_menu_zone_setting">Zones Setting</string>
    <string name="left_menu_event_fiilter">Events Filter</string>
    <string name="left_menu_help">Help</string>
    <string name="title_activity_home_setting">Map</string>
    <string name="title_activity_zone_setting">ZoneSettingActivity</string>
    <string name="left_menu_logout">Logout</string>

    <string name="title_activity_detailed_report">DetailedReport</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_quick_report">QuickReport</string>
    <string name="title_activity_report">ReportActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_try_gallery">TryGallery</string>


    <string name="select">Observation Level</string>

    <string-array name="observationlevel_array">
        <item>Select Observation Level</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Highest</item>
    </string-array>

    <string name="title_activity_observation_detailed">ObservationDetailed</string>
    <string name="title_activity_observation_list">ObservationList</string>
    <string name="time_format">hh:mm aaa</string>

    <string name="window_info_accident_time">Time:</string>
    <string name="window_info_accident_description">Description:</string>
    <string name="window_info_observation_level">Level:</string>

    <string name="window_info_google_place_address">Address:</string>
    <string name="window_info_google_place_phone">Phone:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>

    <string name="window_info_home_location_title">Home</string>
    <string name="window_info_home_location_address">Address: </string>

    <string name="select_accType">Accident Type</string>

    <string name="aviation_accident">Aviation Accident</string>
    <string name="criminal">Criminal</string>
    <string name="earthquake">Earthquake</string>
    <string name="ferry_accident">Ferry Accident</string>
    <string name="industry_accident">Industry Accident</string>
    <string name="traffic_accident">Traffic Accident</string>
    <string name="weather_accident">Weather Accident</string>

    <string-array name="accidentType_array">
        <item>Select Accident Type</item>
        <item>@string/aviation_accident</item>
        <item>@string/criminal</item>
        <item>@string/earthquake</item>
        <item>@string/ferry_accident</item>
        <item>@string/industry_accident</item>
        <item>@string/traffic_accident</item>
        <item>@string/weather_accident</item>
    </string-array>

    <string name="title_activity_event_filter">Event filters</string>
    <string name="event_filter_activity_filter_by_time_label">Show accidents happened within</string>
    <string-array name="event_filter_by_time_array">
        <item>1 hour</item>
        <item>3 hours</item>
        <item>5 hours</item>
        <item>7 hours</item>
        <item>24 hours</item>
    </string-array>

    <string name="event_filter_by_accident_type_label">Filter by accident types</string>

    <string name="many_days_ago">Many days ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">days ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="minute_ago">min ago</string>
    <string name="minutes_ago">mins ago</string>
    <string name="just_now">just now</string>

    <string name="observation_list_activity_empty_accident_list">You have not posted any accident</string>
    <string name="title_activity_notification">NotificationActivity</string>

    <string name="notification_activity_title">New Accidents</string>
    <string name="notification_list_activity_empty_list">No new accidents</string>
    <string name="observation_list_page_title">Reported</string>
    <string name="report_new_accident_page_title">Report New Accident</string>


    <!-- TRY TO PICK IMAGE FROM GALLERY -->
    <string name="select_picture">Select Picture</string>
    <string name="msg_failed_to_get_intent_data">Failed to get intent data</string>
    <string name="msg_failed_to_get_picture">Failed to get image</string>

    <string name="update_profile_picture_failed">Failed to update new profile picture</string>
    <string name="update_profile_picture_successfully">Profile picture has been updated</string>

    <string name="new_accident_reported">Report has been sent</string>
    <string name="new_accident_failed_to_report">Couldn\'t report the accident</string>

    <string name="new_account_created">New Account Created</string>
    <string name="email_is_used">Your email has been used, please use another email</string>
</resources>
