<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ifn701.safeguarder.activities.ZoneSettingActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zone_setting_radius"
        android:textSize="48px"/>

    <EditText
        android:id="@+id/radiusTextEditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/radiusTextEditor"
        android:text="@string/zone_setting_update_home_location"
        android:paddingTop="100px"
        android:textSize="48px"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/addressTextEditor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_black_24dp"
            android:onClick="searchAddress"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zone_setting_update_setting"
        android:onClick="updateSettings"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"/>
</LinearLayout>
