<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ifn701.safeguarder.activities.EventFilterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/header_back_button_size"
            android:layout_height="@dimen/header_back_button_size"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:layout_gravity="center_vertical"
            android:onClick="goBack"/>

        <TextView
            android:text="@string/title_activity_event_filter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30dp"
            android:gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <CheckBox
            android:id="@+id/cbFilterByTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_filter_activity_filter_by_time_label"/>

        <Spinner
            android:id="@+id/spinnerFilterByTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/event_filter_by_time_array"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_filter_by_accident_type_label"
            android:layout_weight="1"/>
        <CheckBox
            android:id="@+id/cbCheckAllAccidentTypes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ListView
        android:id="@+id/listviewAccidentTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
        <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@drawable/current_home_switch_bar_top_border"-->
            <!--android:paddingTop="@dimen/activity_vertical_margin"-->
            <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
            <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
            <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
            <!-->-->

        <!--<LinearLayout-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingTop="@dimen/activity_vertical_margin"-->
            <!--android:paddingBottom="@dimen/activity_vertical_margin">-->
            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/event_filter_by_accident_type_label"-->
                <!--android:textSize="16dp"-->
                <!--android:layout_weight="1"-->
                <!--/>-->

            <!--<CheckBox-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/cbSelectAll"-->
                <!--/>-->
        <!--</LinearLayout>-->


            <!--<LinearLayout-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingTop="@dimen/activity_vertical_margin"-->
                <!--android:paddingBottom="@dimen/activity_vertical_margin">-->
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/aviation_marker"-->
                    <!--android:paddingRight="5dp"/>-->
                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/aviation_accident"-->
                     <!--android:layout_weight="1"/>-->
                <!--<CheckBox-->
                    <!--android:id="@+id/cbAviation"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingTop="@dimen/activity_vertical_margin"-->
                <!--android:paddingBottom="@dimen/activity_vertical_margin">-->
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/crime_marker"-->
                    <!--android:paddingRight="5dp"/>-->
                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/criminal"-->
                    <!--android:layout_weight="1"/>-->
                <!--<CheckBox-->
                    <!--android:id="@+id/cbCriminal"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingTop="@dimen/activity_vertical_margin"-->
                <!--android:paddingBottom="@dimen/activity_vertical_margin">-->
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/earthquake_marker"-->
                    <!--android:paddingRight="5dp"/>-->
                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/earthquake"-->
                    <!--android:layout_weight="1"/>-->
                <!--<CheckBox-->
                    <!--android:id="@+id/cbEarthquake"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingTop="@dimen/activity_vertical_margin"-->
                <!--android:paddingBottom="@dimen/activity_vertical_margin">-->
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/ferry_marker"-->
                    <!--android:paddingRight="5dp"/>-->
                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/ferry_accident"-->
                    <!--android:layout_weight="1"/>-->
                <!--<CheckBox-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingTop="@dimen/activity_vertical_margin"-->
                <!--android:paddingBottom="@dimen/activity_vertical_margin">-->
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/industry_accident_marker"-->
                    <!--android:paddingRight="5dp"/>-->
                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/industry_accident"-->
                    <!--android:layout_weight="1"/>-->
                <!--<CheckBox-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingTop="@dimen/activity_vertical_margin"-->
                <!--android:paddingBottom="@dimen/activity_vertical_margin">-->
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/traffic_accident_marker"-->
                    <!--android:paddingRight="5dp"/>-->
                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/traffic_accident"-->
                    <!--android:layout_weight="1"/>-->
                <!--<CheckBox-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingTop="@dimen/activity_vertical_margin"-->
                <!--android:paddingBottom="@dimen/activity_vertical_margin">-->
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/weather_marker"-->
                    <!--android:paddingRight="5dp"/>-->
                <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/weather_accident"-->
                    <!--android:layout_weight="1"/>-->
                <!--<CheckBox-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
            <!--</LinearLayout>-->

        <!--</LinearLayout>-->
    <!--</ScrollView>-->



    </LinearLayout>
